# trajax

./: .gitignore  NOTICE  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements.txt
examples/: README.md
examples/benchmarks/: ilqr_benchmark.py
examples/notebooks/l4dc/: Car2D.ipynb  QuadPend.ipynb  jax4dc.ipynb  requirements.txt
tests/: line_search_test.py  manifold_test.py  optimizers_test.py  plot_test.py
trajax/: __init__.py  optimizers.py
trajax/core/: __init__.py  problem.py  trajectory.py  types.py
trajax/legacy/: __init__.py
trajax/lqr/: __init__.py  riccati.py
trajax/mpc/: __init__.py  config.py  controller.py  problem.py
trajax/qp/: __init__.py  alilqr_backend.py  base.py  clarabel_backend.py  cvxpy_backend.py  osqp_backend.py  proxqp_backend.py
trajax/solvers/: __init__.py  base.py  cem.py  constrained_ilqr.py  ilqr.py  sampling.py
trajax/utils/: __init__.py  adjoint.py  integrators.py  linearize.py  manifold.py  psd.py  rollout.py
